--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
     <header>
-        <img src="{{ site.baseurl }}/assets/Stepp0r.svg" alt="Stepp0r" class="img-responsive center-block"/>
+        <img src="{{ site.baseurl }}/assets/Respons0r.svg" alt="Stepp0r" class="img-responsive center-block"/>
     </header>
 </div>
 <div class="row">
